Added a bunch of GUI changes

--- a/Hotspot Controller/App.config
+++ b/Hotspot Controller/App.config
@@ -15,5 +15,7 @@
     <add key="password" value="null"/>
     <add key ="activedatanetwork" value="null"/>
     <add key="activehostnetwork" value="null"/>
+    <add key="backColor" value="0 0 0"/>
+    <add key="foreColor" value="255 255 255"/>
   </appSettings>
 </configuration>
